<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anr.app.Tracker"
    android:background="@null">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myCredit"
        android:src="@drawable/credit"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/myBrain"
        android:layout_alignEnd="@+id/myBrain"
        android:layout_alignLeft="@+id/myBrain"
        android:layout_alignStart="@+id/myBrain" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:id="@+id/myCredits"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addCredit"
        android:src="@drawable/aonecredit"
        android:layout_gravity="center"
        android:text="+"
        android:layout_alignTop="@+id/subtractCredit"
        android:layout_toRightOf="@+id/myBrain"
        android:layout_toLeftOf="@+id/myClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtractCredit"
        android:src="@drawable/sonecredit"
        android:layout_gravity="center"
        android:text="-"
        android:layout_alignTop="@+id/myCredit"
        android:layout_toLeftOf="@+id/myBrain" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myBrain"
        android:src="@drawable/brain"
        android:layout_below="@+id/myClick"
        android:layout_alignLeft="@+id/myBadpub"
        android:layout_alignStart="@+id/myBadpub" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/addBrain"
        android:layout_toRightOf="@+id/myBrain"
        android:layout_alignBottom="@+id/subtractBrain" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/subtractBrain"
        android:layout_alignTop="@+id/myBrain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/subractPub"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myBadpub"
        android:src="@drawable/badpub"
        android:layout_alignTop="@+id/subractPub"
        android:layout_toRightOf="@+id/subractPub" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/addPub"
        android:layout_alignTop="@+id/myBadpub"
        android:layout_toRightOf="@+id/myBadpub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badpub"
        android:id="@+id/myBadpubs"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:shadowColor="#ff000000"
        android:layout_alignBottom="@+id/addPub"
        android:layout_alignLeft="@+id/myCredits" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/subTag"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/myBadpub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myTag"
        android:src="@drawable/tag"
        android:layout_alignTop="@+id/subTag"
        android:layout_toRightOf="@+id/subTag" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/addTag"
        android:layout_alignTop="@+id/myTag"
        android:layout_toRightOf="@+id/myTag" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:id="@+id/myTags"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/addTag"
        android:layout_alignLeft="@+id/myBadpubs"
        android:layout_alignStart="@+id/myBadpubs"
        android:textStyle="bold"
        android:singleLine="false"
        android:shadowColor="#ff999999" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myClick1"
        android:src="@drawable/clicked"
        android:layout_below="@+id/myTags"
        android:layout_toRightOf="@+id/addTag" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myClick4"
        android:src="@drawable/clicked"
        android:layout_above="@+id/myClick3"
        android:layout_alignLeft="@+id/myClick3"
        android:layout_alignStart="@+id/myClick3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myClick3"
        android:src="@drawable/clicked"
        android:layout_above="@+id/myClick2"
        android:layout_toRightOf="@+id/addPub" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myClick2"
        android:src="@drawable/clicked"
        android:layout_above="@+id/myClick1"
        android:layout_toRightOf="@+id/addPub" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myClick"
        android:src="@drawable/click"
        android:background="@null"
        android:adjustViewBounds="false"
        android:layout_alignTop="@+id/addCredit"
        android:layout_toRightOf="@+id/addBrain" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brain"
        android:id="@+id/myBrains"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/subtractBrain"
        android:layout_alignLeft="@+id/myCredits"
        android:layout_alignStart="@+id/myCredits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myTurns"
        android:background="#ff989898"
        android:text="@string/turns"
        android:textSize="90dp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/addBrain"
        android:layout_alignRight="@+id/myBadpub"
        android:layout_alignEnd="@+id/myBadpub" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Game"
        android:id="@+id/endButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/myTags" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="turns played"
        android:id="@+id/turnsPlayed"
        android:background="#ff989898"
        android:textSize="90dp"
        android:textAlignment="center"
        android:layout_below="@+id/addBrain"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oppCred"
        android:src="@drawable/cred"
        android:layout_below="@+id/myTag"
        android:layout_alignRight="@+id/addBrain"
        android:layout_alignEnd="@+id/addBrain" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oppcreds"
        android:id="@+id/oppCreds"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/endButton"
        android:layout_toRightOf="@+id/endButton"
        android:layout_marginLeft="69dp"
        android:textSize="10dp"
        android:layout_marginBottom="19dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oppadd"
        android:id="@+id/oppAdd"
        android:textSize="8dp"

        android:layout_below="@+id/myTag"
        android:layout_toRightOf="@+id/endButton"
        android:layout_alignBottom="@+id/oppCreds" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oppsub"
        android:id="@+id/oppSub"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/oppCred"
        android:layout_toRightOf="@+id/endButton"
        android:layout_alignTop="@+id/oppCreds" />

</RelativeLayout>
